--- a/advent-of-code-2024.fsproj
+++ b/advent-of-code-2024.fsproj
@@ -17,6 +17,7 @@
     </PropertyGroup>
 
     <ItemGroup>
+        <PackageReference Include="FParsec" Version="1.1.1" />
         <PackageReference Include="FSharp.Stats" Version="0.5.0" />
         <PackageReference Include="MathNet.Numerics.FSharp" Version="5.0.0" />
         <PackageReference Include="Plotly.NET" Version="5.1.0" />
