--- a/.github/workflows/dotnet.yml
+++ b/.github/workflows/dotnet.yml
@@ -21,7 +21,7 @@ jobs:
       with:
         dotnet-version: 9.0.x
     - name: Restore dependencies
-      run: dotnet restore -p:test=true --configuration Release
+      run: dotnet restore -p:test=true 
     - name: Build
       run: dotnet build -p:test=true --no-restore --configuration Release
     - name: Test
